; ModuleID = '/home/carl/AnghaBench/kphp-kdb/logs/extr_logs-engine.c_fork_write_index.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/logs/extr_logs-engine.c_fork_write_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@child_pid = common dso_local global i32 0, align 4
@verbosity = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [55 x i8] c"process with pid %d already generates index, skipping\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"fork: %m\0A\00", align 1
@binlogname = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [32 x i8] c"created child process pid = %d\0A\00", align 1
@force_write_index = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fork_write_index() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @child_pid, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %12

4:                                                ; preds = %0
  %5 = load i64, i64* @verbosity, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %4
  %8 = load i32, i32* @stderr, align 4
  %9 = load i32, i32* @child_pid, align 4
  %10 = call i32 (i32, i8*, ...) @fprintf(i32 %8, i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %7, %4
  br label %38

12:                                               ; preds = %0
  %13 = call i32 (...) @flush_binlog_ts()
  %14 = call i32 (...) @fork()
  store i32 %14, i32* %1, align 4
  %15 = load i32, i32* %1, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32, i32* @stderr, align 4
  %19 = call i32 (i32, i8*, ...) @fprintf(i32 %18, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  br label %37

20:                                               ; preds = %12
  %21 = load i32, i32* %1, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %20
  store i32* null, i32** @binlogname, align 8
  %24 = call i32 (...) @save_index()
  store i32 %24, i32* %1, align 4
  %25 = load i32, i32* %1, align 4
  %26 = call i32 @exit(i32 %25) #3
  unreachable

27:                                               ; preds = %20
  %28 = load i64, i64* @verbosity, align 8
  %29 = icmp sgt i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %27
  %31 = load i32, i32* @stderr, align 4
  %32 = load i32, i32* %1, align 4
  %33 = call i32 (i32, i8*, ...) @fprintf(i32 %31, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i32 %32)
  br label %34

34:                                               ; preds = %30, %27
  %35 = load i32, i32* %1, align 4
  store i32 %35, i32* @child_pid, align 4
  br label %36

36:                                               ; preds = %34
  br label %37

37:                                               ; preds = %36, %17
  store i64 0, i64* @force_write_index, align 8
  br label %38

38:                                               ; preds = %37, %11
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @flush_binlog_ts(...) #1

declare dso_local i32 @fork(...) #1

declare dso_local i32 @save_index(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
